# sql-data-warehouse-project

./: .gitignore  Pipfile  README.md  main.py  pyproject.toml
on_premise/: .env.example  Dockerfile  docker-compose.yaml  pyproject.toml
on_premise/airflow/dags/: bronze_dag.py  gold_dag.py  silver_backfill_dag.py  silver_layer_dag.py  weather_ingestion_dag.py
on_premise/dags/: kafka_stream.py
on_premise/scripts/00_init/: ddl_db.sql
on_premise/scripts/01_bronze/: ddl_bronze.sql
on_premise/scripts/02_silver/: ddl_silver.sql
on_premise/scripts/03_gold/: ddl_gold.sql
on_premise/sql/: QUICK_REFERENCE.md  README.md
on_premise/sql/00_init/: health_check.sql  init_database.sql  init_db.sql
on_premise/sql/01_bronze/: bronze_layer.sql  ddl_bronze.sql
on_premise/sql/02_silver/: ddl_silver.sql  eda.sql  silver_layer.sql
on_premise/sql/03_gold/: ddl_gold.sql  gold_layer.sql
on_premise/sql/04_utilities/: monitoring_health.sql  performance_indexing.sql  role_management.sql
on_premise/src/extractors/: extraction_orchestrator.py  open_meteo_api_extractor.py  open_meteo_api_sdk.py
on_premise/src/loaders/: bronze_loader.py
on_premise/src/weather_etl/: __init__.py
on_premise/src/weather_etl/extractors/: __init__.py  database_error_logger.py  extraction_orchestrator.py  open_meteo_api_extractor.py
on_premise/src/weather_etl/loaders/: __init__.py  bronze_loader.py  learn_file.py  test.txt
