[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sql-data-warehouse-project"
version = "0.1.0"
description = "WeatherAPI etl database project."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "charset-normalizer>=3.4.4",
    "flatbuffers>=25.2.10",
    "h11>=0.16.0",
    "jh2>=5.0.10",
    "niquests>=3.15.2",
    "numpy>=2.3.4",
    "openmeteo-requests>=1.7.3",
    "openmeteo-sdk>=1.21.2",
    "pandas>=2.3.3",
    "psycopg2-binary>=2.9.11",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.2.1",
    "pytz>=2025.2",
    "qh3>=1.5.5",
    "requests-cache>=1.2.1",
    "retry-requests>=2.0.0",
    "six>=1.17.0",
    "tzdata>=2025.2",
    "urllib3-future>=2.14.905",
    "wassima>=2.0.2",
]

[project.scripts]
# Optional: CLI entry points if needed

[dependency-groups]
dev = [
    "apache-airflow==3.1.0",
    "pytest>=8.4.2",
]

[tool.setuptools.packages.find]
where = ["src"]
