[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "weather-etl"
version = "0.1.0"
description = "Weather ETL package for extracting forecast data from Open-Meteo API and loading to PostgreSQL data warehouse."
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    { name = "Tanat", email = "bright.tanat@hotmail.com" }
]
keywords = ["weather", "etl", "airflow", "data-engineering", "open-meteo"]

# =============================================================================
# DEPENDENCIES: Only what weather_etl package needs to run
# =============================================================================
# Note: We removed Airflow from here because:
# 1. Airflow is the ENVIRONMENT that runs our package, not a dependency OF it
# 2. The Docker image already has Airflow installed
# 3. Including Airflow here would cause conflicts and huge install size
# =============================================================================
dependencies = [
    # Open-Meteo API
    "openmeteo-requests>=1.7.3",
    "openmeteo-sdk>=1.21.2",
    
    # Data processing
    "pandas>=2.3.3",
    "numpy>=2.3.4",
    
    # Database
    "psycopg2-binary>=2.9.11",
    
    # HTTP/Caching (required by openmeteo-requests)
    "requests-cache>=1.2.1",
    "retry-requests>=2.0.0",
    
    # Utilities
    "python-dateutil>=2.9.0.post0",
    "pytz>=2025.2",
]

# OPTIONAL DEPENDENCIES: For development/testing

[project.optional-dependencies]
dev = [
    "pytest>=8.4.2",
    "pytest-cov>=4.0.0",
    "black>=24.0.0",
    "ruff>=0.3.0",
]

# =============================================================================
# PACKAGE DISCOVERY: Tell setuptools where to find our code
# =============================================================================
[tool.setuptools.packages.find]
where = ["src"]  # Look in the "src" folder
include = ["weather_etl*"]  # Include weather_etl and all subpackages

# OPTIONAL: Tool configs
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"